--- a/mediator/.nais/nais.yaml
+++ b/mediator/.nais/nais.yaml
@@ -70,6 +70,13 @@ spec:
           - name: quiz
             envVarPrefix: DB
         cascadingDelete: false
+        flags:
+          - name: "cloudsql.enable_pgaudit"
+            value: "on"
+          - name: "pgaudit.log"
+            value: "write,ddl,role"
+          - name: "pgaudit.log_parameter"
+            value: "on"
     permissions:
       - resource:
           apiVersion: resourcemanager.cnrm.cloud.google.com/v1beta1
