--- a/mediator/.nais/nais.yaml
+++ b/mediator/.nais/nais.yaml
@@ -36,8 +36,11 @@ spec:
     requests:
       cpu: 75m
       memory: 512Mi
-  secureLogs:
-    enabled: true
+  accessPolicy:
+    outbound:
+      rules:
+        - application: logging
+          namespace: nais-system
   env:
     - name: PORT
       value: "8080"
